@@ -1,21 +1,23 @@
 <oaf_info>
 
-<oaf_server iid="OAFIID:paint_component_simple_factory:301d4c2f-3f2b-404d-99e5-3fde72a1e601" type="exe" location="paint-component-simple">
-<oaf_attribute name="repo_ids" type="stringv">
-<item value="IDL:GNOME/ObjectFactory:1.0"/>
-</oaf_attribute>
-<oaf_attribute name="name" type="string" value="Simple Paint component factory"/>
-<oaf_attribute name="description" type="string" value="simple paint embeddable factory"/>
+<oaf_server iid="OAFIID:Bonobo_Sample_Paint_EmbeddableFactory" type="exe"
+	location="bonobo-sample-paint">
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:GNOME/ObjectFactory:1.0"/>
+	</oaf_attribute>
+	<oaf_attribute name="name" type="string" value="Simple Paint component factory"/>
+	<oaf_attribute name="description" type="string" value="simple paint embeddable factory"/>
 </oaf_server>
 
-<oaf_server iid="OAFIID:paint_component_simple:9c04da1c-d44c-4041-9991-fed1ed1ed079" type="factory" location="OAFIID:paint_component_simple_factory:301d4c2f-3f2b-404d-99e5-3fde72a1e601">
-<oaf_attribute name="repo_ids" type="stringv">
-<item value="IDL:Bonobo/Unknown:1.0"/>
-<item value="IDL:Bonobo/Embeddable:1.0"/>
-<item value="IDL:Bonobo/Print:1.0"/>
-</oaf_attribute>
-<oaf_attribute name="name" type="string" value="Simple Paint component"/>
-<oaf_attribute name="description" type="string" value="A simple paint component"/>
+<oaf_server iid="OAFIID:Bonobo_Sample_Paint_Embeddable" type="factory"
+ location="OAFIID:Bonobo_Sample_Paint_EmbeddableFactory">
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:Bonobo/Unknown:1.0"/>
+		<item value="IDL:Bonobo/Embeddable:1.0"/>
+		<item value="IDL:Bonobo/Print:1.0"/>
+	</oaf_attribute>
+	<oaf_attribute name="name" type="string" value="Simple Paint component"/>
+	<oaf_attribute name="description" type="string" value="A simple paint component"/>
 </oaf_server>
 
 </oaf_info>
