@@ -1,7 +1,7 @@
 
 SUBDIRS = container bonobo-hello
 
-bin_PROGRAMS = paint-component-simple sample-canvas-item
+bin_PROGRAMS = bonobo-sample-paint bonobo-sample-canvas-item
 
 GPRINT_LIBS = $(top_builddir)/bonobo/libbonobo-print.la
 
@@ -12,20 +12,20 @@ INCLUDES =						\
         -I$(includedir)                                 \
 	$(BONOBOX_TEST_CFLAGS)
 
-paint_component_simple_SOURCES =	\
+bonobo_sample_paint_SOURCES =	\
 	paint-component-simple.c
 
-paint_component_simple_LDADD =				\
+bonobo_sample_paint_LDADD =				\
 	$(top_builddir)/bonobo/libbonobo.la		\
 	$(top_builddir)/bonobo/libbonobox.la		\
 	$(top_builddir)/bonobo/libbonobo-print.la	\
 	$(BONOBOX_TEST_LIBS)				\
 	$(INTLLIBS)
 
-sample_canvas_item_SOURCES =	\
+bonobo_sample_canvas_item_SOURCES =	\
 	sample-canvas-item.c
 
-sample_canvas_item_LDADD = 			\
+bonobo_sample_canvas_item_LDADD = 			\
 	$(top_builddir)/bonobo/libbonobo.la	\
 	$(top_builddir)/bonobo/libbonobox.la	\
 	$(BONOBOX_TEST_LIBS)			\
