@@ -1,14 +1,15 @@
 <oaf_info>
 
-<oaf_server iid="OAFIID:bonobo-hello-factory:413433d0-c643-4618-9c3e-2c99f4d1b2a0" type="exe" location="bonobo-hello">
+<oaf_server iid="OAFIID:Bonobo_Sample_HelloEmbeddableFactory" type="exe"
+	location="bonobo-sample-hello">
   <oaf_attribute name="repo_ids" type="stringv">
     <item value="IDL:GNOME/ObjectFactory:1.0"/>
   </oaf_attribute>
   <oaf_attribute name="description" type="string" value="Bonobo-Hello factory"/>
 </oaf_server>
 
-<oaf_server iid="OAFIID:bonobo-hello:e745f596-9e29-4bb9-8dde-fb5bfafb4782" type="factory"
-	location="OAFIID:bonobo-hello-factory:413433d0-c643-4618-9c3e-2c99f4d1b2a0">
+<oaf_server iid="OAFIID:Bonobo_Sample_HelloEmbeddable" type="factory"
+	location="OAFIID:Bonobo_Sample_HelloEmbeddableFactory">
   <oaf_attribute name="repo_ids" type="stringv">
     <item value="IDL:Bonobo/Unknown:1.0"/>
     <item value="IDL:Bonobo/Embeddable:1.0"/>
