@@ -70,7 +70,7 @@ hello_bonobo_init (void)
 {
 	factory =
 		bonobo_generic_factory_new (
-			"OAFIID:bonobo-hello-factory:413433d0-c643-4618-9c3e-2c99f4d1b2a0",
+			"OAFIID:Bonobo_Sample_Hello_EmbeddableFactory",
 			hello_embeddable_factory, NULL);
 	if (!factory)
 		g_warning ("Couldn't register hello object factory");
@@ -106,3 +106,4 @@ main (int argc, char **argv)
 
 	return 0;
 }
+
