@@ -1,20 +1,0 @@
-<oaf_info>
-
-<oaf_server iid="OAFIID:bonobo_calculator_factory:0f55cdac-47fc-4d5b-9111-26c84a244fe2" type="exe" location="sample-control-factory">
-<oaf_attribute name="repo_ids" type="stringv">
-<item value="IDL:GNOME/ObjectFactory:1.0"/>
-</oaf_attribute>
-<oaf_attribute name="name" type="string" value="Calculator control factory"/>
-<oaf_attribute name="description" type="string" value="Factory for the sample BonoboCalculator control"/>
-</oaf_server>
-
-<oaf_server iid="OAFIID:bonobo_calculator:fab8c2a7-9576-437c-aa3a-a8617408970f" type="factory" location="OAFIID:bonobo_calculator_factory:0f55cdac-47fc-4d5b-9111-26c84a244fe2">
-<oaf_attribute name="repo_ids" type="stringv">
-<item value="IDL:Bonobo/Unknown:1.0"/>
-<item value="IDL:Bonobo/Control:1.0"/>
-</oaf_attribute>
-<oaf_attribute name="name" type="string" value="Calculator control"/>
-<oaf_attribute name="description" type="string" value="A sample Bonobo control which displays a calculator."/>
-</oaf_server>
-
-</oaf_info>
