@@ -1,0 +1,43 @@
+<oaf_info>
+
+<oaf_server iid="OAFIID:Bonobo_Sample_ControlFactory" type="exe"
+ location="bonobo-sample-controls">
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:GNOME/ObjectFactory:1.0"/>
+	</oaf_attribute>
+	<oaf_attribute name="name" type="string" value="Clock control factory"/>
+	<oaf_attribute name="description" type="string" value="Factory for the sample BonoboClock control"/>
+</oaf_server>
+
+<oaf_server iid="OAFIID:Bonobo_Sample_Clock" type="factory"
+	location="OAFIID:Bonobo_Sample_ControlFactory">
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:Bonobo/Unknown:1.0"/>
+		<item value="IDL:Bonobo/Control:1.0"/>
+	</oaf_attribute>
+	<oaf_attribute name="name" type="string" value="Clock control"/>
+	<oaf_attribute name="description" type="string" value="A sample Bonobo control which displays a clock."/>
+</oaf_server>
+
+<oaf_server iid="OAFIID:Bonobo_Sample_Calculator" type="factory"
+	location="OAFIID:Bonobo_Sample_ControlFactory">
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:Bonobo/Unknown:1.0"/>
+		<item value="IDL:Bonobo/Control:1.0"/>
+	</oaf_attribute>
+	<oaf_attribute name="name" type="string" value="Calculator control"/>
+	<oaf_attribute name="description" type="string" value="A sample Bonobo control which displays a calculator."/>
+</oaf_server>
+
+<oaf_server iid="OAFIID:Bonobo_Sample_Entry" type="factory"
+	location="OAFIID:Bonobo_Sample_ControlFactory">
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:Bonobo/Unknown:1.0"/>
+		<item value="IDL:Bonobo/Control:1.0"/>
+	</oaf_attribute>
+	<oaf_attribute name="name" type="string" value="Entry control"/>
+	<oaf_attribute name="description" type="string" value="A sample Bonbobo control wrapping a Gtk Entry widget."/>
+</oaf_server>
+
+</oaf_info>
+
