@@ -1,8 +1,7 @@
 #ifndef __BONOBO_CLOCK_CONTROL_H__
 #define __BONOBO_CLOCK_CONTROL_H__
 
-#include <bonobo/bonobo-control.h>
-
-void             bonobo_clock_factory_init (void);
+BonoboObject *bonobo_clock_control_new (void);
+BonoboObject *bonobo_entry_control_new (void);
 
 #endif /* __BONOBO_CLOCK_CONTROL_H__ */
